--- a/package.json
+++ b/package.json
@@ -15,5 +15,10 @@
   "bugs": {
     "url": "https://github.com/ishmaelthedestroyer/noUtil/issues"
   },
-  "homepage": "https://github.com/ishmaelthedestroyer/noUtil"
+  "homepage": "https://github.com/ishmaelthedestroyer/noUtil",
+  "devDependencies": {
+    "grunt": "^0.4.5",
+    "grunt-contrib-concat": "^0.5.0",
+    "load-grunt-tasks": "^2.0.0"
+  }
 }
